--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -11,6 +11,7 @@
                 <ul class="new-user-form add-recipe-list">
                     <input class="hidden-div" type="text" id="author" name="author" value="{{ user._id }}">
                     <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
+                    <input class="hidden-div" type="text" id="author_email" name="author_email" value="{{ user.email }}">
                     <div class="column cusine-selection-box">
                         <li>
                             <select id="cusine" name="cusine" size="5" required>
