--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 <div class="leaderboard-intro-bg"></div>
 <section class="leaderboard-intro-section">
     <div class="left">
-        <a href=""><i class="fas fa-file-alt"></i></a>
+        <a href="{{ url_for('head_chefs', username=username) }}"><i class="fas fa-file-alt"></i></a>
     </div>
     <div class="right">
         <div class="leaderboard-intro-content-container">
