--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container outer-recipe-container">
         <div class="recipe-content-container center-text">
-            <p>Please choose a recipe you would like to try from our list!<br>Alternatively, why not add your own and see if people like it?</p>
+            <p>Please choose a recipe you would like to try from our list!<br>Alternatively, why not add your own?</p>
             <a href="{{ url_for('add_recipe') }}"><button class="add-recipe-btn">Add recipe</button></a>
         </div>
         <div class="recipe-container">
