--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,7 +69,8 @@ header {
 .ingredients-bg,
 .profile-img,
 .edit-add-ingredient-bg,
-.add-recipe-bg {
+.add-recipe-bg,
+.head-chefs-bg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
@@ -2129,6 +2130,65 @@ td > img {
       width: 86%;
       min-width: 0; } }
 
+.head-chefs-section .container,
+.head-chefs-section .outer-container {
+  min-height: 50vh;
+  text-align: center; }
+.head-chefs-section .container {
+  padding-bottom: 40px; }
+  .head-chefs-section .container .para-container {
+    color: #fff;
+    width: 80%;
+    margin: 0 auto; }
+  .head-chefs-section .container p {
+    padding: 10px;
+    font-size: 23px;
+    line-height: 34px; }
+.head-chefs-section .table-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px; }
+  .head-chefs-section .table-container tr {
+    color: #fff; }
+  .head-chefs-section .table-container table {
+    margin-top: 30px;
+    background-color: #000;
+    border-radius: 20px;
+    min-width: 80%;
+    max-width: 98%; }
+  .head-chefs-section .table-container tr, .head-chefs-section .table-container td, .head-chefs-section .table-container th {
+    padding: 14px; }
+  .head-chefs-section .table-container th {
+    color: #fff;
+    padding-top: 30px; }
+  .head-chefs-section .table-container tr:nth-of-type(2) {
+    font-size: 1.6em;
+    color: #ff0000; }
+    @media (max-width: 768px) {
+      .head-chefs-section .table-container tr:nth-of-type(2) {
+        font-size: 1.3em; } }
+  .head-chefs-section .table-container tr:nth-of-type(3) {
+    font-size: 1.2em;
+    color: #f99806; }
+    @media (max-width: 768px) {
+      .head-chefs-section .table-container tr:nth-of-type(3) {
+        font-size: 1.3em; } }
+  .head-chefs-section .table-container tr:nth-of-type(4) {
+    font-size: 1.2em;
+    color: #ffff00; }
+    @media (max-width: 768px) {
+      .head-chefs-section .table-container tr:nth-of-type(4) {
+        font-size: 1.1em; } }
+  .head-chefs-section .table-container tr:last-of-type td {
+    padding-bottom: 48px; }
+  @media (max-width: 768px) {
+    .head-chefs-section .table-container th:nth-of-type(2),
+    .head-chefs-section .table-container td:nth-of-type(2),
+    .head-chefs-section .table-container th:nth-of-type(3),
+    .head-chefs-section .table-container td:nth-of-type(3) {
+      max-width: 72px; } }
+
 .leaderboard-intro-bg,
 .sign-up-bg,
 .log-in-bg,
@@ -2136,7 +2196,8 @@ td > img {
 .ingredients-bg,
 .profile-img,
 .edit-add-ingredient-bg,
-.add-recipe-bg {
+.add-recipe-bg,
+.head-chefs-bg {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -2175,6 +2236,11 @@ td > img {
 .add-recipe-bg,
 .edit-recipe-bg {
   background-image: url("../images/adils-photography-419432-unsplash.jpg");
+  top: 0 !important; }
+
+.head-chefs-bg {
+  background-image: url("../images/nick-karvounis-624439-unsplash.jpg");
+  background-position: top;
   top: 0 !important; }
 
 body {
