--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -37,6 +37,10 @@
                 </div>
             </div>
             <hr>
+            <div class="please-wait-container">
+                <p class="please-wait-message">Please wait...</p> 
+                <i class="fas fa-circle-notch rotate"></i>
+            </div>
             <div class="row instructions-and-ingredients">
                 <div class="instructions-row">
                     <div class="recipe-instructions">
