--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -1366,6 +1366,10 @@ a ~ .recipe-row-bottom {
     @include large-mobile {
         height: 202px;
     }
+    
+    @include mobile {
+        height: 180px;
+    }
 }
 
 .image-container ~ h1 {
@@ -1395,6 +1399,8 @@ a ~ .recipe-row-bottom {
 }
 
 .recipe-details-container {
+    position: relative;
+    
     @include large-mobile {
         padding: 0 10px;
     }
@@ -1684,6 +1690,26 @@ a ~ .recipe-row-bottom {
         @include large-mobile {
             min-width: 20px;    
         }
+    }
+}
+
+.please-wait-container {
+    position: absolute;
+    z-index: 1;
+    height: 160px;
+    width: 100%;
+    background-color: $black;
+    color: $white;
+    @extend %centralise-inner-container;
+    flex-direction: column;
+    
+    @include large-mobile {
+        height: 190px;
+    }
+    
+    p, i {
+        font-size: 40px;
+        padding: 16px;
     }
 }
 
