--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             </div>
         </div>
     </div>
-    <img src="{{ url_for('static', filename='images/bbq.jpg') }}" alt="" class="title-img ">
+    <img src="{{ url_for('static', filename='images/bbq.jpg') }}" alt="A picture of meat on a BBQ" class="title-img ">
 </section>
 <section class="welcome-sentence center-text">
     <p>I <span>LOVE</span> to cook. So do you, that's why you're here, right?<br>Dive in, try them out, and share your favourate recipes too.</p>
@@ -24,7 +24,7 @@
     <div class="recipes-intro-content">
         <div class="left">
             <div class="pic-overlay"></div>
-            <img src="{{ url_for('static', filename='images/food-default.jpg') }}">
+            <img src="{{ url_for('static', filename='images/food-default.jpg') }}" alt="A picture of lots of delicious looking foods">
         </div>
         <div class="right">
             <div class="content-container">
@@ -45,8 +45,8 @@
             </div>
         </div>
         <div class="right">
-            <img src="{{ url_for('static', filename='images/brooke-lark-158019-unsplash.jpg') }}">
-            <img src="{{ url_for('static', filename='images/rustic-vegan-756636-unsplash.jpg') }}">
+            <img src="{{ url_for('static', filename='images/brooke-lark-158019-unsplash.jpg') }}" alt="A picture of a bowl containing fruits and meats">
+            <img src="{{ url_for('static', filename='images/rustic-vegan-756636-unsplash.jpg') }}" alt="A chef holds a colourful veiterian burger">
         </div>
     </div>
 </section>
