--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,14 +14,12 @@
                         <li><input class="center-text" id="email" name="email" type="email" placeholder="Email"></li>
                         <li><input class="center-text" id="password" required minlength="5" name="password" type="password" placeholder="Password"></li>
                         <li><input class="center-text" id="password2" required minlength="5" name="password2" type="password" placeholder="Confirm password"></li>
-                        <div class="hidden-div">
-                            <li><input id="first_name" name="first_name" type="text" value="TBC"></li>
-                            <li><input id="surname" name="surname" type="text" value="TBC"></li>
-                            <li><input id="country" name="country" type="text" value="TBC"></li>
-                            <li><input id="user_photo" name="user_photo" type="text" value="https://mongoose-os.com/images/generic_user.png"></li>
-                        </div>
-                        <button type="submit" class="sign-up-btn">Submit</button>
+                        <li class="hidden-item"><input id="first_name" name="first_name" type="text" value="TBC"></li>
+                        <li class="hidden-item"><input id="surname" name="surname" type="text" value="TBC"></li>
+                        <li class="hidden-item"><input id="country" name="country" type="text" value="TBC"></li>
+                        <li class="hidden-item"><input id="user_photo" name="user_photo" type="text" value="https://mongoose-os.com/images/generic_user.png"></li>
                     </ul>
+                    <button type="submit" class="sign-up-btn">Submit</button>
                 </div>
             </form>
         </div>
