--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,6 +84,9 @@ header {
   justify-content: center;
   align-items: center; }
 
+.stats-section h2 {
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15); }
+
 /*----------------- Main colors*/
 /* --- Widths */
 .hide-me-btn {
@@ -582,6 +585,10 @@ footer {
   color: #bbb;
   line-height: 2.4;
   letter-spacing: 0; }
+  @media (max-width: 500px) {
+    .recipes-intro-content p,
+    .ingredients-intro-section p {
+      padding: 0 10px; } }
 
 .recipes-intro-content img {
   width: 100%;
@@ -862,6 +869,27 @@ footer {
   @media (max-width: 1024px) {
     .fa-file-alt {
       font-size: 92px; } }
+
+.stats-section {
+  background-color: #f99806;
+  color: #fff;
+  text-align: center;
+  padding: 14px 20px 30px; }
+  .stats-section h2 {
+    margin-bottom: 22px;
+    font-size: 42px; }
+
+.stat-block {
+  display: inline-block;
+  width: 15%;
+  padding: 10px; }
+
+.stat-block-type2 {
+  display: inline-block;
+  width: 20%;
+  padding: 12px;
+  font-size: 1.2em;
+  color: #000; }
 
 .sign-up-section,
 .log-in-section {
