--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -3,7 +3,7 @@
     <h3 class="photo-instructions-header">Use a personalised photo!</h3>
     <p class="photo-instructions-para">To use a photo of your choice please copy and paste the http address of your photo in the photo image address box.</p>
     <p class="photo-instructions-para">To get the http address, simply find the photo you wish to use on the internet, right click it, and copy the image address / location.</p>
-    <p class="photo-instructions-para">And woila! As if by magic, it will appear when you update!</p>
+    <p class="photo-instructions-para">And voila! As if by magic, it will appear when you update!</p>
 </div>
 <div class="page-bg edit-recipe-bg"></div>
 <section class="edit-recipe-section">
