--- a/templates/index.html
+++ b/templates/index.html
@@ -80,16 +80,18 @@
                 {% for key, value in stat.items() %}
                     {% if key != "Total Recipes" and key != "Number of Authors"%}
                         <div class="stat-block">
-                            {{ key }} recipes - {{ value }}
+                            {{ key }} recipes: {{ value }}
                         </div>
                     {% endif %}
                 {% endfor %}
             {% endfor %}
+        </div>
+        <div class="stats row">
             {% for stat in stats %}
                 {% for key, value in stat.items() %}
                     {% if key == "Total Recipes" or key == "Number of Authors" %}
                     <div class="stat-block-type2">
-                        {{ key }} - {{ value }}
+                        {{ key }}: {{ value }}
                     </div>
                     {% endif %}
                 {% endfor %}
