--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -882,14 +882,18 @@ footer {
 .stat-block {
   display: inline-block;
   width: 15%;
-  padding: 10px; }
+  padding: 10px;
+  line-height: 24px;
+  vertical-align: middle; }
 
 .stat-block-type2 {
   display: inline-block;
   width: 20%;
   padding: 12px;
   font-size: 1.2em;
-  color: #000; }
+  color: #000;
+  line-height: 24px;
+  vertical-align: top; }
 
 .sign-up-section,
 .log-in-section {
