--- a/templates/add_ingredient.html
+++ b/templates/add_ingredient.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %} {% block content %}
 <div class="edit-add-ingredient-bg page-bg"></div>
+
+<!-- Adds a pop up box with instructions when user-photo-instructions-btn is hovered -->
+
 <div class="user-photo-instructions">
     <h3 class="photo-instructions-header">Use a personalised photo!</h3>
     <p class="photo-instructions-para">To use a photo of your choice please copy and paste the http address of your photo in the photo image address box.</p> 
     <p class="photo-instructions-para">To get the http address, simply find the photo you wish to use on the internet, right click it, and copy the image address / location.</p> 
     <p class="photo-instructions-para">And voila!  As if by magic, it will appear when you update!</p> 
 </div>
+
+
 <section class="add-edit-ingredient-section">
     <div class="container">
         <h1 class="section-title">Add an Ingredient</h1>
         <p>Please enter the details of the ingredient you would like to add...</p>
+        
+        <!--This form will add an ingredients details to the database-->
+        
         <form action="{{ url_for('insert_ingredient', recipe_id=recipe_id) }}" method="POST">
             <ul class="new-user-form">
                 <li><input class="text-input" id="ingredient_name" name="ingredient_name" type="text" placeholder="Ingredient Name" maxlength="36" required></li>
