--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
         </div>
     </footer>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/scripts/main.js') }}"></script>
 
 </body>
 </html>
